--- a/a.html
+++ b/a.html
@@ -28,8 +28,7 @@
 <!-- markdown -->
 <H1>About Hucker<br>
 <h2>Hucker is a student For computer software
-Base in Beijing.
-我来自中国，我的英文很差。
+Live in Beijing.
 
 <!-- markdown end -->
 </div>
@@ -37,8 +36,8 @@ Base in Beijing.
 <!-- content -->
 <p></p><h1>About Hucker<br>
 </h1><h2>Hucker is a student For computer software
-Base in Beijing.
-我来自中国，我的英文很差。<p></p></h2>
+Live in Beijing.
+<p></p></h2>
 <!-- content end -->
 </div>
 <br>
